--- a/static/search.html
+++ b/static/search.html
@@ -59,22 +59,22 @@
 
         <div class="shortcuts">
             <div class="shortcut-frame">
-                <div class="game-container" onclick='proxy("https://wrnd.lat")'>
+                <div class="game-container" onclick='proxy("https://raw1001.net")'>
                     <div class="game">
                         <img src="/assets/img/wrnd-ico.png">
                     </div>
                 </div>
-                <div class="game-container" onclick='proxy("https://hydragames.cc/surge")'>
+                <div class="game-container" onclick='proxy("https://9anime.se/")'>
                     <div class="game">
                         <img src="/assets/img/surge-ico.png">
                     </div>
                 </div>
-                <div class="game-container" onclick='proxy("https://netflix.com")'>
+                <div class="game-container" onclick='proxy("https://klmanga.si")'>
                     <div class="game">
                         <img src="/assets/img/netflix-ico.png">
                     </div>
                 </div>
-                <div class="game-container" onclick='proxy("https://twitch.tv")'>
+                <div class="game-container" onclick='proxy("https://youtube.com")'>
                     <div class="game">
                         <img src="/assets/img/twitch-ico.png">
                     </div>
