--- a/static/home.html
+++ b/static/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="82d50f63b4809b775ffdea9a75992354faa4d9e7" content="82d50f63b4809b775ffdea9a75992354faa4d9e7" />
-    <title>Home</title>
+    <title>スタディサプリ</title>
     <link rel="stylesheet" href="/assets/css/base.css" />
     <link rel="stylesheet" href="/assets/css/home.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
