--- a/static/home.html
+++ b/static/home.html
@@ -40,7 +40,7 @@
             </a>
         </div>
         <form id="form" class="center-form">
-            <input autofocus autocomplete="off" class="search" id="search" placeholder="Search the web or enter a URL"
+            <input autofocus autocomplete="off" class="search" id="search" placeholder="無断の複製を禁止しますby ino"
                 required />
             <button type="submit" class="submit-button">
                 <i class="fas fa-search searchicon"></i>
